--- a/index.html
+++ b/index.html
@@ -11,29 +11,29 @@
         <h1>Odpočet odjezdu do Norska</h1>
         
         <div id="countdown" class="countdown-display">
-            <div>
+            <div id="months-box">
                 <span id="months">0</span>
                 <div class="label">Měsíců</div>
             </div>
-            <div>
+            <div id="days-box">
                 <span id="days">0</span>
                 <div class="label">Dnů</div>
             </div>
-            <div>
+            <div id="hours-box">
                 <span id="hours">0</span>
                 <div class="label">Hodin</div>
             </div>
-            <div>
+            <div id="minutes-box">
                 <span id="minutes">0</span>
                 <div class="label">Minut</div>
             </div>
-            <div>
+            <div id="seconds-box">
                 <span id="seconds">0</span>
                 <div class="label">Vteřin</div>
             </div>
         </div>
 
-        <p class="signature">David je prd</p> 
+        <p class="signature" id="signature-text">David je prd</p> 
     </div>
 
     <script src="script.js"></script>
